--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos/stylesdesign.css" />
+    <link rel="stylesheet" href="../estilos/stylesdesign.css" />
   </head>
   <body>
     <header>
@@ -60,16 +60,16 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
-            src="Imagenes/california3.jpg"
+            src="../Imagenes/california3.jpg"
             class="d-block w-100"
             alt="California"
           />
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/disney2.jpg" class="d-block w-100" alt="Disney" />
+          <img src="../Imagenes/disney2.jpg" class="d-block w-100" alt="Disney" />
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/espana3.jpg" class="d-block w-100" alt="España" />
+          <img src="../Imagenes/espana3.jpg" class="d-block w-100" alt="España" />
         </div>
       </div>
       <button
@@ -106,31 +106,31 @@
         <!-- g-4 agrega espaciado entre filas y columnas -->
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <img
-            src="Imagenes/california2.jpg"
+            src="../Imagenes/california2.jpg"
             alt="California"
             class="img-fluid"
           />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/disney3.jpeg" alt="Disney" class="img-fluid" />
+          <img src="../Imagenes/disney3.jpeg" alt="Disney" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/espana1.jpg" alt="España" class="img-fluid" />
+          <img src="../Imagenes/espana1.jpg" alt="España" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/canadao1.jpg" alt="Italia" class="img-fluid" />
+          <img src="../Imagenes/canadao1.jpg" alt="Italia" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/japon2.jpg" alt="Japón" class="img-fluid" />
+          <img src="../Imagenes/japon2.jpg" alt="Japón" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/filipinas1.jpg" alt="New York" class="img-fluid" />
+          <img src="../Imagenes/filipinas1.jpg" alt="New York" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/peru2.jpg" alt="New York" class="img-fluid" />
+          <img src="../Imagenes/peru2.jpg" alt="New York" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="Imagenes/turquia3.jpg" alt="New York" class="img-fluid" />
+          <img src="../Imagenes/turquia3.jpg" alt="New York" class="img-fluid" />
         </div>
       </div>
     </div>
