--- a/views/login.html
+++ b/views/login.html
@@ -16,7 +16,7 @@
           <div class="card-body p-4">
             <h3 class="text-center fw-bold mb-4 text-primary">Iniciar Sesión</h3>
 
-            <form action="validar_login.php" method="POST">
+            <form action="../src/validar_login.php" method="POST">
               <div class="mb-3">
                 <label for="email" class="form-label">Correo Electrónico</label>
                 <input type="email" id="email" name="email" class="form-control rounded" placeholder="example@email.com" required />
