--- a/views/plan.html
+++ b/views/plan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos/styles.css" />
+    <link rel="stylesheet" href="../estilos/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,9 +18,9 @@
     <header>
       <nav>
         <ul class="menu">
-          <li><a href="mi_perfil.php">Perfil</a></li>
+          <li><a href="../src/mi_perfil.php">Perfil</a></li>
           <li><a href="plan.html"class="active">Plan</a></li>
-          <li><a href="reservas.php">Mis Reservas</a></li>
+          <li><a href="../src/reservas.php">Mis Reservas</a></li>
           <li><a href="servicios.html">Servicios</a></li>
 
 
