--- a/views/servicios.html
+++ b/views/servicios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos/styles.css" />
-    <link rel="stylesheet" href="estilos/stylesweather.css" />
+    <link rel="stylesheet" href="../estilos/styles.css" />
+    <link rel="stylesheet" href="../estilos/stylesweather.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <title>Traveler Assistant - Clima, Moneda y Vuelos</title>
 </head>
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="mi_perfil.php">Perfil</a></li>
+                <li><a href="../src/mi_perfil.php">Perfil</a></li>
                 <li><a href="plan.html">Plan</a></li>
-                <li><a href="reservas.php">Mis Reservas</a></li>
+                <li><a href="../src/reservas.php">Mis Reservas</a></li>
                 <li><a href="servicios.html" class="active">Servicios</a></li>
             </ul>
         </nav>
