--- a/views/destinos.html
+++ b/views/destinos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinos - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css" />
+    <link rel="stylesheet" href="../estilos/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
   </head>
@@ -12,10 +12,10 @@
     <header>
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="destinos.html" class="active">Destinos</a></li>
-          <li><a href="hoteles.html">Hoteles</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="../views/index.html">Inicio</a></li>
+          <li><a href="../views/destinos.html" class="active">Destinos</a></li>
+          <li><a href="../views/hoteles.html">Hoteles</a></li>
+          <li><a href="../views/contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +34,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       // Cargar el XML de destinos
-      fetch("destinos.xml")
+      fetch("../src/destinos.xml")
         .then((response) => response.text())
         .then((data) => {
           const parser = new DOMParser();
