--- a/views/registro.html
+++ b/views/registro.html
@@ -16,7 +16,7 @@
           <div class="card-body p-4">
             <h3 class="text-center fw-bold mb-4 text-primary">Crea tu Cuenta</h3>
 
-            <form action="validar_registro.php" method="POST">
+            <form action="../src/validar_registro.php" method="POST">
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" id="nombre" name="nombre" class="form-control rounded" placeholder="Tu nombre" required />
@@ -77,7 +77,7 @@
 
               <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary rounded">Registrarse</button>
-                <button type="button" onclick="window.location.href='login.html'" class="btn btn-outline-secondary rounded">
+                <button type="button" onclick="window.location.href='../views/login.html'" class="btn btn-outline-secondary rounded">
                   Ya tienes cuenta? Inicia Sesión
                 </button>
               </div>
