--- a/views/destinos.html
+++ b/views/destinos.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="estilos/styledestinos.css" />
+    <link rel="stylesheet" href="../estilos/styledestinos.css" />
   </head>
   <body>
     <header>
