--- a/views/destinos.html
+++ b/views/destinos.html
@@ -71,7 +71,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Cargar el XML de destinos
-        fetch("destinos.xml")
+        fetch("../src/destinos.xml")
           .then((response) => response.text())
           .then((data) => {
             const parser = new DOMParser();
