--- a/views/destinos.html
+++ b/views/destinos.html
@@ -59,7 +59,9 @@
       <div
         id="destinos-container"
         class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"
-      ></div>
+      >
+        <!-- Aquí se generará el contenido dinámico -->
+      </div>
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
@@ -68,6 +70,7 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
+        // Cargar el XML de destinos
         fetch("destinos.xml")
           .then((response) => response.text())
           .then((data) => {
