--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,6 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../estilos/stylesdesign.css" />
   </head>
@@ -66,10 +64,18 @@
           />
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/disney2.jpg" class="d-block w-100" alt="Disney" />
+          <img
+            src="../Imagenes/disney2.jpg"
+            class="d-block w-100"
+            alt="Disney"
+          />
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/espana3.jpg" class="d-block w-100" alt="España" />
+          <img
+            src="../Imagenes/espana3.jpg"
+            class="d-block w-100"
+            alt="España"
+          />
         </div>
       </div>
       <button
@@ -124,13 +130,21 @@
           <img src="../Imagenes/japon2.jpg" alt="Japón" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="../Imagenes/filipinas1.jpg" alt="New York" class="img-fluid" />
+          <img
+            src="../Imagenes/filipinas1.jpg"
+            alt="New York"
+            class="img-fluid"
+          />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <img src="../Imagenes/peru2.jpg" alt="New York" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="../Imagenes/turquia3.jpg" alt="New York" class="img-fluid" />
+          <img
+            src="../Imagenes/turquia3.jpg"
+            alt="New York"
+            class="img-fluid"
+          />
         </div>
       </div>
     </div>
