--- a/views/servicios.html
+++ b/views/servicios.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../estilos/styles.css" />
+    <link rel="stylesheet" href="../estilos/styleservicios.css" />
     <link rel="stylesheet" href="../estilos/stylesweather.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <title>Traveler Assistant - Clima, Moneda y Vuelos</title>
+    <title>Traveler Assistant - Clima y Moneda</title>
 </head>
 <body class="weather">
     <!-- Encabezado principal -->
@@ -29,7 +29,6 @@
             <ul id="menu" class="list-group">
                 <li class="list-group-item"><a href="#" onclick="showSection('weather')">Clima</a></li>
                 <li class="list-group-item"><a href="#" onclick="showSection('currency')">Conversor de Moneda</a></li>
-                <li class="list-group-item"><a href="#" onclick="showSection('flights')">Vuelos</a></li>
             </ul>
         </div>
 
@@ -77,21 +76,7 @@
                 <h5 class="hint">El resultado aparecerá aquí...</h5>
                 <div id="conversionResult" class="result-large"></div>
               </div>
-            </div>   
-
-            <!-- Aplicación de Vuelos -->
-            <div id="flights" class="content-section" style="display: none;">
-              <h2>Encuentra tu Próximo Vuelo</h2>
-              <form id="flightSearchForm">
-                  <input type="text" id="origin" placeholder="Origen (Ej. MEX)" class="form-control mb-2" required />
-                  <input type="text" id="destination" placeholder="Destino (Ej. JFK)" class="form-control mb-2" required />
-                  <input type="date" id="departureDate" placeholder="Fecha de Salida" class="form-control mb-2" required />
-                  <button type="submit" class="btn btn-primary">Buscar Vuelo</button>
-              </form>
-              <div id="flightResultsList" class="body mt-3">
-                <h5 class="hint">Los vuelos aparecerán aquí...</h5>
-              </div>
-            </div>          
+            </div>
         </div>
     </div>
 
@@ -101,9 +86,8 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="src/appweather.js"></script>
-    <script src="scripts/currency.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="../src/appweather.js"></script>
+    <script src="../src/scripts/currency.js"></script>
     <script>
         // Mostrar y ocultar secciones
         function showSection(section) {
