--- a/views/mapa.html
+++ b/views/mapa.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mapa Interactivo - Traveler Assistant</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"/>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"/>
     <link
       rel="stylesheet"
       href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
@@ -16,45 +15,35 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../estilos/styleservicios.css" />
+
   </head>
   <body>
-    <!-- Barra de navegación -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container">
-          <a class="navbar-brand" href="#">Elitescapes</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../src/mi_perfil.php">Mi perfil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../views/plan.html">Travel Assistant</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../src/reservas.php">Reservas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../views/servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="../views/mapa.html">Mapa</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+            <div class="container">
+                <a class="navbar-brand" href="#">Elitescapes</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="../src/mi_perfil.php">Mi perfil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../views/plan.html">Travel Assistant</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../src/reservas.php">Reservas</a></li>
+                        <li class="nav-item"><a class="nav-link " href="../views/servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link active " href="../views/mapa.html">Mapa</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- Contenedor del mapa -->
