--- a/views/servicios.html
+++ b/views/servicios.html
@@ -82,7 +82,7 @@
                     </p>
                 </div>
                 <div class="quick-buttons mt-4 d-flex justify-content-around">
-                    <button class="btn btn-outline-info" ny">New York</button>
+                    <button class="btn btn-outline-info ny">New York</button>
                     <button class="btn btn-outline-info mad">Madrid</button>
                     <button class="btn btn-outline-info lon">London</button>
                     <button class="btn btn-outline-info mex">Mexico City</button>
