--- a/views/servicios.html
+++ b/views/servicios.html
@@ -45,14 +45,17 @@
       </nav>
     </header>
     <div class="d-flex">
-        <!-- Barra lateral -->
-        <aside class="sidebar bg-light shadow-sm p-3">
-            <h3>Opciones</h3>
-            <ul id="menu" class="list-group">
-                <li class="list-group-item list-group-item-secondary"><a href="#" data-section="weather">Clima</a></li>
-                <li class="list-group-item list-group-item-secondary"><a href="#" data-section="currency">Conversor de Moneda</a></li>
-            </ul>
-        </aside>
+        <aside class="sidebar text-white shadow-lg p-4">
+        <h3 class="text-center mb-4">Opciones</h3>
+        <ul id="menu" class="list-group">
+          <li class="list-group-item list-group-item-dark">
+            <a href="#" data-section="weather" class="sidebar-link text-white">Clima</a>
+          </li>
+          <li class="list-group-item list-group-item-dark">
+            <a href="#" data-section="currency" class="sidebar-link text-white">Conversor de Moneda</a>
+          </li>
+        </ul>
+      </aside>
 
         <main class="container mt-4" id="content">
             <!-- Aplicación de Clima -->
