--- a/views/mapa.html
+++ b/views/mapa.html
@@ -54,6 +54,9 @@
         </div>
       </nav>
     </header>
+    <div>
+      <h4 class="text-center mt-4 mb-4">Map to your dream destination 🛩️</h4>
+    </div>
 
     <!-- Contenedor del mapa -->
     <section class="container mt-4">
