--- a/views/hoteles.html
+++ b/views/hoteles.html
@@ -38,9 +38,7 @@
             <li class="nav-item">
               <a class="nav-link" href="hoteles.html"> Hoteles</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html"> Contacto</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="login.html"> Login</a>
             </li>
@@ -72,6 +70,9 @@
         </div>
       </div>
     </div>
+    <footer class="bg-dark text-white text-center py-3">
+      <p>&copy; 2024 Travel Agent</p>
+    </footer>
 
     <script>
       fetch("../src/datahoteles.xml")
