--- a/views/index.html
+++ b/views/index.html
@@ -36,9 +36,7 @@
             <li class="nav-item">
               <a class="nav-link" href="hoteles.html"> Hoteles</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html"> Contacto</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="login.html"> Login</a>
             </li>
@@ -148,9 +146,26 @@
         </div>
       </div>
     </div>
+    <footer class="footer bg-dark text-white py-4 mt-4">
+      <div class="container d-flex justify-content-between">
+        <!-- Left Section -->
+        <div class="footer-left text-center">
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">Sobre nosotros</a></li>
+            <li><a href="#" class="text-white">Coordina un grupo</a></li>
+            <li><a href="#" class="text-white">Políticas de privacidad</a></li>
+            <li><a href="#" class="text-white">Términos y condiciones</a></li>
+          </ul>
+        </div>
 
-    <footer class="text-center py-3 mt-4 bg-light">
-      <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
+        <!-- Right Section -->
+        <div class="footer-right text-center">
+          <h6>Contáctanos</h6>
+          <p>Whatsapp: +5218184214214</p>
+          <p>Email: support@eliteescapes.com</p>
+          <p>&copy; 2024 Elitescapes. Todos los derechos reservados.</p>
+        </div>
+      </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
