--- a/views/plan.html
+++ b/views/plan.html
@@ -59,7 +59,7 @@
       <main>
         <div class="form-wrapper text-center">
           <form id="form-generator">
-            <p class="text-muted destino-detalles mt-4">
+            <p class="text-muted destino-detalles mt-4 mb-4">
               Planifica tu próxima aventura en segundos
             </p>
             <form id="form-generator" class="d-flex flex-column align-items-center">
@@ -73,7 +73,7 @@
                 Generate!
               </button>
             </form>
-          <div class="hint mb-4">Next Destination...</div>
+          <div class="hint mb-4 mt-4">Next Destination...</div>
         </div>
         <div class="answer hidden" id="reponse-generator">
           <div>What are you looking for your next trip...</div>
