--- a/views/mapa.html
+++ b/views/mapa.html
@@ -63,6 +63,10 @@
       <div id="map"></div>
     </section>
 
+    <footer class="bg-dark text-white text-center py-3 mt-4">
+      <p>&copy; 2024 Travel Agent</p>
+    </footer>
+
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
