--- a/views/plan.html
+++ b/views/plan.html
@@ -80,9 +80,9 @@
         </div>
       </main>
 
-      <footer class="text-center py-3 mt-4 bg-light">
-        <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
-      </footer>  
+    <footer class="bg-dark text-white text-center py-3">
+      <p>&copy; 2024 Travel Agent</p>
+    </footer>
     </div>
     <script src="../src/app.js"></script>
   </body>
