--- a/views/servicios.html
+++ b/views/servicios.html
@@ -163,10 +163,10 @@
                 </div>
             </section>
             
-
-<footer class="text-center py-3 mt-4 bg-light">
+      <footer class="text-center py-3 mt-4 bg-light">
         <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
       </footer> 
+        </main>
 
     <!-- Scripts -->
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
